[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doll"
dynamic = ["version"]
description = 'DOLL (Docker OCI Local Liaison) — a simple read-only OCI registry backed by your local Docker images'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Matthew Printz", email = "matt@jataware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "docker>=7.0.0",
  "containerd",
]

[project.urls]
Documentation = "https://github.com/jataware/doll#readme"
Issues = "https://github.com/jataware/doll/issues"
Source = "https://github.com/jataware/doll"

[tool.hatch.version]
path = "src/doll/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/doll tests}"

[tool.coverage.run]
source_pkgs = ["doll", "tests"]
branch = true
parallel = true
omit = [
  "src/doll/__about__.py",
]

[tool.coverage.paths]
doll = ["src/doll", "*/doll/src/doll"]
tests = ["tests", "*/doll/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
